# tza-google-cfe

./: .gitignore  LICENSE  README.md  Snakefile  config.yaml  configs.asean.example.yaml  configs.asean.yaml  configs.india.example.yaml  configs.india.yaml  configs.japan.example.yaml  configs.japan.yaml  configs.japan_buildconstraints.yaml  configs.japan_ccs_sen.yaml  configs.taiwan.example.yaml  configs.taiwan.yaml  configs.yaml  environment.yaml  environment.yml  generators.csv  generators_tp3_check.csv  main.py  pyproject.toml  storage_units.csv  storage_units_check.csv  test_run.ipynb
data/: ninja_pv_1.3838_103.7954_uncorrected.csv  ninja_wind_1.3672_103.8133_uncorrected.csv  system_inputs.xlsx  tech_params.csv
demo/: README.md  example-with-asean.ipynb
docs/: README.md
notebooks/: 01_toy_model_sgp.ipynb  02_cost_model.ipynb  02_toy_model_sgp_storage.ipynb  03_toy_model_sgp_cfe.ipynb
outputs/solved_networks/: test.nc
run/: build_models.py  configs.japan.yaml  configs.yaml  power_sector_targets.csv  pypsa-data-template.xlsx  run_scenarios.py
scripts/: add_cfe_to_brownfield.py  download_brownfield.py  helper.py  prepare_brownfield_for_cfe.py  run_annual_matching.py  run_hourly_matching.py  solve_brownfield.py
src/: 01_configs.yaml  01_run_scenarios.py  02_postprocess.py  annual_matching.py  brownfield.py  cfe.py  constraints.py  get.py  helpers.py  hourly_matching.py  plotting.py  postprocess.py  postprocess_plotting.py  prepare_brownfield_network.py  prepare_network_for_cfe.py  simple_model.py
stock_models/ASEAN/: README.md  generators.csv
(+11 files in other folders)
